SFAP - popup 新增單選 複選的下拉

--- a/SFAP/SFAP-html/SFAP_visit_record_04.html
+++ b/SFAP/SFAP-html/SFAP_visit_record_04.html
@@ -6,7 +6,7 @@
   <meta name="HandheldFriendly" content="true">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  <title>CTBC 陪訪紀錄內容 - 陪訪記錄(HNW)</title>
+  <title>CTBC 陪訪紀錄內容 - 陪訪紀錄(簡易)</title>
   <link rel="stylesheet" href="css/style.css">
   <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.js"></script>
   <script type="text/javascript">
@@ -224,10 +224,10 @@
                             <li>
                                 <p>投資共識</p>
                             </li>
-                            <li>
+                            <li class="btn_in">
                                 <p>陪訪紀錄(簡易)</p>
                             </li>
-                            <li class="btn_in">
+                            <li>
                                 <p>陪訪記錄(HNW)</p>
                             </li>
                         </ul>
