--- a/SFAP/SFAP-html/SFAP_visit_record_02.html
+++ b/SFAP/SFAP-html/SFAP_visit_record_02.html
@@ -191,7 +191,7 @@
                                     <div class="a_field r_line">
                                         <label class="rowTitle">陪訪日期</label>
                                         <div class="txn-input bg-gary">
-                                            <input type="text" class="text-center form-control" placeholder="2023/06/23">
+                                            <input type="text" class="text-center form-control" value="2023/06/23">
                                             
                                         </div>
                                         <span class="glyphicon glyphicon-calendar" title="編輯"></span>
