--- a/SFAP/SFAP-html/SFAP_visit_record_01.html
+++ b/SFAP/SFAP-html/SFAP_visit_record_01.html
@@ -193,7 +193,7 @@
                                     <div class="a_field r_line">
                                         <label class="rowTitle">陪訪日期</label>
                                         <div class="txn-input bg-gary">
-                                            <input type="text" class="text-center form-control" placeholder="2023/06/23">
+                                            <input type="text" class="text-center form-control" value="2023/06/23">
                                             
                                         </div>
                                         <span class="glyphicon glyphicon-calendar" title="編輯"></span>
@@ -346,7 +346,6 @@
                             </div>
                         </div>
                     </div>
-                    
                 </div>
                 <div class="formRow-m">
                     <button id="" type="button" class="c-btn c-btn--primary">關閉</button>
