--- a/SFAP/SFAP-html/popup.html
+++ b/SFAP/SFAP-html/popup.html
@@ -5,7 +5,7 @@
     <meta name="HandheldFriendly" content="true">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>CTBC Invest Common - popup</title>
+    <title>CTBC - popup</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
