--- a/SFAP/SFAP-html/popup_visit_record_01.html
+++ b/SFAP/SFAP-html/popup_visit_record_01.html
@@ -5,7 +5,7 @@
     <meta name="HandheldFriendly" content="true">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>CTBC Invest Common - popup 家庭(過去)</title>
+    <title>CTBC - popup 家庭(過去)</title>
     <link rel="stylesheet" href="css/style.css">
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <script type="text/javascript">
