SFAP - 新增 客戶背景與財富來源 表單內容

--- a/SFAP/SFAP-html/SFAP_visit_record_03.html
+++ b/SFAP/SFAP-html/SFAP_visit_record_03.html
@@ -365,6 +365,10 @@
                                                                     <input type="checkbox" />
                                                                     <div class="control__indicator"></div>
                                                                 </label>
+                                                                <label class="control control--checkbox">Disabled & checked 複選題選項4
+                                                                    <input type="checkbox" />
+                                                                    <div class="control__indicator"></div>
+                                                                </label>
                                                                 <label class="control control--checkbox">複選題選項5
                                                                     <input type="checkbox" />
                                                                     <div class="control__indicator"></div>
@@ -417,6 +421,10 @@
                                                                 </label>
                                                                 <label class="control control--checkbox">Disabled & checked 複選題選項4
                                                                     <input type="checkbox" disabled="disabled" checked="checked" />
+                                                                    <div class="control__indicator"></div>
+                                                                </label>
+                                                                <label class="control control--radio">radio Disabled & checked 複選題選項4
+                                                                    <input type="radio" disabled="disabled" checked="checked" />
                                                                     <div class="control__indicator"></div>
                                                                 </label>
                                                                 <label class="control control--checkbox">複選題選項5
