CRM - 更新版本(側邊選單+手機選單)

--- a/CRM/customer_info.html
+++ b/CRM/customer_info.html
@@ -22,14 +22,19 @@
     <nav class="pushy pushy-left" data-focus="#first-link">
         <div class="pushy-content">
             <ul>
-                <li class="pushy-link">
-                    <a href="order.html">委刊單</a>
+                <li class="pushy-submenu">
+                    <button>委刊單管理</button>
+                    <ul>
+                        <li class="pushy-link">
+                            <a href="order.html">委刊單</a>
+                        </li>
+                        <li class="pushy-link">
+                            <a href="audit.html">委刊單審核</a>
+                        </li>
+                    </ul>
                 </li>
                 <li class="pushy-link">
                     <a href="customer.html">客戶管理</a>
-                </li>
-                <li class="pushy-link">
-                    <a href="customer.html">委刊單審核</a>
                 </li>
                 <li class="pushy-submenu">
                     <button>服務項目</button>
@@ -53,6 +58,14 @@
                         </li>
                         <li class="pushy-link">
                             <a href="authority-customer.html">客戶</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="pushy-submenu">
+                    <button>使用者管理</button>
+                    <ul>
+                        <li class="pushy-link">
+                            <a href="user.html">使用者</a>
                         </li>
                     </ul>
                 </li>
@@ -86,14 +99,19 @@
     <section class="middle-container clearfix">
         <nav class="side-menu">
             <ul>
-                <li>
-                    <a href="order.html">委刊單</a>
+                <li class="pushy-submenu">
+                    <button>委刊單管理</button>
+                    <ul>
+                        <li>
+                            <a href="order.html">委刊單</a>
+                        </li>
+                        <li>
+                            <a href="audit.html">委刊單審核</a>
+                        </li>
+                    </ul>
                 </li>
                 <li>
                     <a class="selected" href="customer.html">客戶管理</a>
-                </li>
-                <li>
-                    <a href="audit.html">委刊單審核</a>
                 </li>
                 <li class="pushy-submenu">
                     <button>服務項目</button>
@@ -117,6 +135,14 @@
                         </li>
                         <li class="pushy-link">
                             <a href="authority-customer.html">客戶</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="pushy-submenu">
+                    <button>使用者管理</button>
+                    <ul>
+                        <li class="pushy-link">
+                            <a href="user.html">使用者</a>
                         </li>
                     </ul>
                 </li>
@@ -727,7 +753,8 @@
             </section>
         </main>
         <footer class="footer-inside">
-            <p>Copyright© 2023 <a href="#" target="_blank">Weblisher Co., Ltd.</a> All Rights Reserved.</p>
+            <p>Copyright© 2023 <a href="https://www.weblisher.com.tw/" target="_blank">Weblisher Data Tech Co., Ltd.</a> All Rights
+                Reserved.</p>
         </footer>
     </section>
     </div>
