--- a/CRM/user.html
+++ b/CRM/user.html
@@ -22,14 +22,19 @@
     <nav class="pushy pushy-left" data-focus="#first-link">
         <div class="pushy-content">
             <ul>
-                <li class="pushy-link">
-                    <a href="order.html">委刊單</a>
+                <li class="pushy-submenu">
+                    <button>委刊單管理</button>
+                    <ul>
+                        <li class="pushy-link">
+                            <a href="order.html">委刊單</a>
+                        </li>
+                        <li class="pushy-link">
+                            <a href="audit.html">委刊單審核</a>
+                        </li>
+                    </ul>
                 </li>
                 <li class="pushy-link">
                     <a href="customer.html">客戶管理</a>
-                </li>
-                <li class="pushy-link">
-                    <a href="customer.html">委刊單審核</a>
                 </li>
                 <li class="pushy-submenu">
                     <button>服務項目</button>
@@ -56,8 +61,13 @@
                         </li>
                     </ul>
                 </li>
-                <li class="pushy-link">
-                    <a href="user.html">使用者管理</a>
+                <li class="pushy-submenu">
+                    <button>使用者管理</button>
+                    <ul>
+                        <li class="pushy-link">
+                            <a href="user.html">使用者</a>
+                        </li>
+                    </ul>
                 </li>
             </ul>
         </div>
@@ -89,14 +99,19 @@
     <section class="middle-container clearfix">
         <nav class="side-menu">
             <ul>
-                <li>
-                    <a href="order.html">委刊單</a>
+                <li class="pushy-submenu">
+                    <button>委刊單管理</button>
+                    <ul>
+                        <li>
+                            <a href="order.html">委刊單</a>
+                        </li>
+                        <li>
+                            <a href="audit.html">委刊單審核</a>
+                        </li>
+                    </ul>
                 </li>
                 <li>
                     <a href="customer.html">客戶管理</a>
-                </li>
-                <li>
-                    <a href="audit.html">委刊單審核</a>
                 </li>
                 <li class="pushy-submenu">
                     <button>服務項目</button>
@@ -123,8 +138,13 @@
                         </li>
                     </ul>
                 </li>
-                <li>
-                    <a class="selected" href="user.html">使用者管理</a>
+                <li class="pushy-submenu pushy-submenu-open">
+                    <button class="selected">使用者管理</button>
+                    <ul>
+                        <li class="pushy-link">
+                            <a class="sub-selected" href="user.html">使用者</a>
+                        </li>
+                    </ul>
                 </li>
             </ul>
         </nav>
