--- a/CRM/change_pw.html
+++ b/CRM/change_pw.html
@@ -26,7 +26,8 @@
         </section>
     </main>
     <footer class="footer-container">
-        <p>Copyright© 2021 <a href="#" target="_blank">Weblisher Co., Ltd.</a> All Rights Reserved.</p>
+        <p>Copyright© 2023 <a href="https://www.weblisher.com.tw/" target="_blank">Weblisher Data Tech Co., Ltd.</a> All
+            Rights Reserved.</p>
     </footer>
 </body>
 </html>
