--- a/CRM/login.html
+++ b/CRM/login.html
@@ -22,13 +22,13 @@
                 </fieldset>
                 <p class="text-forget"><a href="forget_pw.html">忘記密碼</a></p>
                 <fieldset class="field">
-                    <input class="default btn--primary-l" type="submit" value="登入">
+                    <input class="default btn--primary-l" type="button" value="登入" onclick="location.href='dashboard.html'"/>
                 </fieldset>
             </form>
         </section>
     </main>
     <footer class="footer-container">
-        <p>Copyright© 2021 <a href="#" target="_blank">Weblisher Co., Ltd.</a> All Rights Reserved.</p>
+        <p>Copyright© 2023 <a href="https://www.weblisher.com.tw/" target="_blank">Weblisher Data Tech Co., Ltd.</a> All Rights Reserved.</p>
     </footer>
 </body>
 </html>
