--- a/CRM/customer_info.html
+++ b/CRM/customer_info.html
@@ -204,8 +204,21 @@
                             </li>
                             <li>
                                 <p>
-                                    <span class="bg bg-greenlight">統編</span>
+                                    <span class="bg bg-greenlight">公司地區</span>
+                                    <span>本國公司</span>
+                                </p>
+                            </li>
+                            <li>
+                                <p>
+                                    <!-- 如果是外國則顯示：公司編號/護照號碼 -->
+                                    <span class="bg bg-greenlight">統編/身分證號碼</span>
                                     <span>24814848</span>
+                                </p>
+                            </li>
+                            <li>
+                                <p>
+                                    <span class="bg bg-greenlight">匯款帳號</span>
+                                    <span>10730123456757</span>
                                 </p>
                             </li>
                             <li>
@@ -218,6 +231,12 @@
                                 <p>
                                     <span class="bg bg-greenlight">傳真</span>
                                     <span>02-2481-4848</span>
+                                </p>
+                            </li>
+                            <li>
+                                <p>
+                                    <span class="bg bg-greenlight">負責人</span>
+                                    <span>王老太太</span>
                                 </p>
                             </li>
                             <li class="flex-2">
@@ -234,18 +253,7 @@
                                     </span>
                                 </p>
                             </li>
-                            <li class="flex-2">
-                                <p>
-                                    <span class="bg bg-greenlight">匯款帳號</span>
-                                    <span>10730123456757</span>
-                                </p>
-                            </li>
-                            <li>
-                                <p>
-                                    <span class="bg bg-greenlight">負責人</span>
-                                    <span>王老太太</span>
-                                </p>
-                            </li>
+                            
                         </ul>
                         <ul class="edit-record-user clearfix">
                             <li class="clearfix">
