tc-產品新增次選單

--- a/jay/tc/products.html
+++ b/jay/tc/products.html
@@ -147,6 +147,22 @@
                     </div>
                 </section>
 
+                <section class="section-wrap submenu-wrap">
+                    <div class="block-box">
+                        <ul class="submenu">
+                            <li>
+                                <p><a class="Selected" href="#">Abaci</a></p>
+                            </li>
+                            <li>
+                                <p><a href="#">AI@Sense</a></p>
+                            </li>
+                            <li>
+                                <p><a href="#">KekkAI</a></p>
+                            </li>
+                        </ul>
+                    </div>
+                </section>
+
                 <section class="section-wrap">
                     <div class="block-box">
                         <div class="abox">
