tc-form-a > button

--- a/jay/tc/contact.html
+++ b/jay/tc/contact.html
@@ -277,13 +277,19 @@
                                 </div>
                             </div>
                             <div class="btn">
+                                <button type="submit">
+                                    <span class="text">SUBMIT</span>
+                                    <span class="icon"><i class="fa-solid fa-chevron-right"></i></span>
+                                </button>
+                            </div>
+                            <!-- <div class="btn">
                                 <p>
                                     <a class="" href="#">
                                         <span class="text">SUBMIT</span>
                                         <span class="icon"><i class="fa-solid fa-chevron-right"></i></span>
                                     </a>
                                 </p>
-                            </div>
+                            </div> -->
                         </form>
                     </div>
                 </section>
