--- a/jay/tc/case.html
+++ b/jay/tc/case.html
@@ -204,6 +204,57 @@
                                 </li>
                                 <li>
                                     <div class="img-logo">
+                                        <img src="images/img_showcase_02.png" alt="">
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="img-logo">
+                                        <img src="images/img_showcase_03.png" alt="">
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="img-logo">
+                                        <img src="images/img_showcase_00.png" alt="">
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="img-logo">
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="img-logo">
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="img-logo">
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="img-logo">
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="img-logo">
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="img-logo">
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="img-logo">
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="img-logo">
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="img-logo">
+                                    </div>
+                                </li>
+                                <li>
+                                    <div class="img-logo">
                                     </div>
                                 </li>
                                 <li>
